IndexedDB: stale index entries may not be removed in some cases https://bugs.webkit.org/show_bug.cgi?id=85224

Patch by Douglas Stockwell <dstockwell@chromium.org> on 2012-05-01
Reviewed by Ojan Vafai.

Ensure that stale index entries are removed when the corresponding
object store entry no longer exists.

No new tests. Addresses a performance / storage leak that is
not amenable to verification in a layout test.

* Modules/indexeddb/IDBLevelDBBackingStore.cpp:
(WebCore):

Canonical link: https://commits.webkit.org/102835@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115743 268f45cc-cd09-0410-ab3c-d52691b4dbfc